Fri, Feb 23, 2024, 9:34 AM -08:00

--- a/gettingStarted.html
+++ b/gettingStarted.html
@@ -22,7 +22,7 @@
 
         <!--FAVICONS using fontawesome.com-->
         <p>
-            <i class="fa-solid fa infinity"></i>
+            <i class="fa-solid fa-burger"></i>
         </p>
 
         <!--TABLE-->
@@ -60,7 +60,7 @@
             &#128514;
         </p>
 
-        <!--INPUTE TYPES-->
+        <!--INPUT TYPES-->
         <input type="text" placeholder="Type Here">
         <br>
         <input type="button" value="Click Here">
@@ -72,8 +72,8 @@
         <input type="date">
         <br>
         <input type="time">
-        
+
     </body>
     <!--NEEDED TO USE FAVICONS FROM FONTAWESOME-->
-    <script src="https://kit.fontawesome.com/c513779648.
+    <script src="https://kit.fontawesome.com/7fbdfba016.js" crossorigin="anonymous"></script>
 </html>
