Mon, Feb 26, 2024, 10:14 AM -08:00

--- a/loading.html
+++ b/loading.html
@@ -2,7 +2,7 @@
 <html lang="eng">
     <head>
         <title>Loading</title>
-        <link rel="stlesheet" href="css/loading.css"
+        <link rel="stylesheet" href="css/loading.css"
     </head>
 
     <body>
