--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <body>
         <h1>This is my website!</h1>
         <a href="search.html">1. Search</a>
-       <p><a href="loading.html">2.Loading</a></p> 
+       <p><a href="loading.html">2.Loading</a></p>
+       <p><a href="expanding.html">3.Expanding</a></p>
     </body>
 
 </html>
