--- a/expanding.html
+++ b/expanding.html
@@ -7,16 +7,16 @@
     <body>
         <div class ="container">
             <div class="panel" style ="background-image: url('css/images/darkcity.jpg')">
-                <h3>City of ash</h3>
+                <h3>City</h3>
             </div>
             <div class="panel" style ="background-image: url('css/images/dcity.jpg')">
-                <h3>City of darkness</h3>
+                <h3>City at night</h3>
             </div>
             <div class="panel active" style ="background-image: url('css/images/nlcity.jpg')">
-                <h3>City of lights</h3>
+                <h3>Streets at night</h3>
             </div>
             <div class="panel" style ="background-image: url('css/images/fridge.jpg')">
-                <h3>City of food</h3>
+                <h3>fridge</h3>
             </div>
             <div class="panel" style ="background-image: url('css/images/bear.jpg')">
                 <h3>Bear</h3>
