--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <a href="search.html">1. Search</a>
        <p><a href="loading.html">2.Loading</a></p>
        <p><a href="expanding.html">3.Expanding</a></p>
+       <p><a href="sound.html">4.Sound</a></p>
     </body>
 
 </html>
