--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
        <p><a href="loading.html">2.Loading</a></p>
        <p><a href="expanding.html">3.Expanding</a></p>
        <p><a href="sound.html">4.Sound</a></p>
+       <p><a href="navigation.html">5.Navigation</a></p>
+
     </body>
 
 </html>
