--- a/navigation.html
+++ b/navigation.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1 class="logo"><a href="navigation.html">My Website</a></h1>
             <ul>
-                <li><a href="#" class = "current">Home</a></li>
+                <li><a href="https://alejandro-lopez-chs.github.io/website1/navigation.html" class = "current">Home</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/Santa_Clara_Vanguard_Drum_and_Bugle_Corps">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact</a></li>
