--- a/landingPage.html
+++ b/landingPage.html
@@ -11,7 +11,7 @@
 <body>
     <nav id="navbar">
         <div class="logo">
-            
+            <img src="" alt="">
         </div>
     </nav>
 
