--- a/landingPage.html
+++ b/landingPage.html
@@ -11,7 +11,7 @@
 <body>
     <nav id="navbar">
         <div class="logo">
-            <img src="" alt="">
+            <img src="https://randomuser.me/api/portraits/men/75.jpg" alt="user">
         </div>
     </nav>
 
