--- a/landingPage.html
+++ b/landingPage.html
@@ -13,6 +13,9 @@
         <div class="logo">
             <img src="https://randomuser.me/api/portraits/men/75.jpg" alt="user">
         </div>
+        <ul>
+            <li><a href=""></a></li>
+        </ul>
     </nav>
 
 </body>
