Wed, Mar 6, 2024, 10:00 AM -08:00

--- a/landingPage.html
+++ b/landingPage.html
@@ -14,9 +14,29 @@
             <img src="https://randomuser.me/api/portraits/men/75.jpg" alt="user">
         </div>
         <ul>
-            <li><a href=""></a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact Me</a></li>
         </ul>
     </nav>
+    <header>
+        <button id="toggle" class="toggle">
+            <i class="fa fa-bars fa-2x"></i>
+        </button>
+        <h1>My Landing Page</h1>
+
+        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, enim!</p>
+
+        <button class="cta-btn" id="open">Sign Up</button>
+    </header>
+
+    <div class="container">
+        <h2>What is this landing page about?</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur voluptate et amet doloremque dolor, corrupti beatae harum minima error quos? Dicta sint fugit necessitatibus debitis labore tenetur blanditiis officia? Voluptas.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ab quod blanditiis excepturi animi modi laboriosam odit architecto eos tempora!</p>
+        <h2>Tell Me Mrore</h2>
+    </div>
 
 </body>
 <script src="js/landingPage.js"></script>
