Wed, Mar 6, 2024, 10:07 AM -08:00

--- a/landingPage.html
+++ b/landingPage.html
@@ -35,7 +35,40 @@
         <h2>What is this landing page about?</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur voluptate et amet doloremque dolor, corrupti beatae harum minima error quos? Dicta sint fugit necessitatibus debitis labore tenetur blanditiis officia? Voluptas.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ab quod blanditiis excepturi animi modi laboriosam odit architecto eos tempora!</p>
-        <h2>Tell Me Mrore</h2>
+
+        <h2>Tell Me More</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil unde maxime totam doloremque deleniti sapiente dicta aspernatur pariatur esse fugiat velit fuga, cum quibusdam ex. Voluptatum, voluptatem culpa voluptates dolore nostrum exercitationem nobis, aliquid earum consequatur expedita eveniet. Voluptas, eos.</p>
+
+        <h2>Benefits</h2>
+        <ul>
+            <li>Lifetime Access</li>
+            <li>30 Day Money Back</li>
+            <li>Tailored Customer Support</li>
+        </ul>
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio vel commodi optio ea! Provident eius rem neque nihil voluptas ad vero eligendi, dolorem impedit nobis aliquid consectetur, fugit tempora. Ratione recusandae, delectus rem reprehenderit illo facilis minima eveniet aut nostrum reiciendis dignissimos deleniti iusto non fugiat sequi, consequuntur exercitationem commodi perferendis nam vel amet, maiores debitis. Illo, ut dolores debitis eaque nisi consequatur labore dolor sed natus? Excepturi, consequatur odit?
+        </p>
+
+        <!--MODAL-->
+        <div class="modal-container" id="modal">
+            <div class="modal">
+                <button class="close-btn" id="close">
+                    <i class="fa fa-times"></i>
+                </button>
+                <div class="modal-header">
+                    <h3>Sign Up</h3>
+                </div>
+                <div class="modal-content">
+                    <p>Register with us to get offers, support, and more</p>
+                    <form class="modal-form">
+                        <div>
+                            <label for="name">Name</label>
+                            <input type="text" id="name" placeholder="Enter Name" class="form-input">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
