--- a/landingPage.html
+++ b/landingPage.html
@@ -17,7 +17,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact Me</a></li>
+            <li><a href="https://bluecoats.com/riffsandrevelations">Contact Me</a></li>
         </ul>
     </nav>
     <header>
