--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
        <p><a href="expanding.html">3.Expanding</a></p>
        <p><a href="sound.html">4.Sound</a></p>
        <p><a href="navigation.html">5.Navigation</a></p>
+       <p><a href="landingPage.html">6.Landing Page</a></p>
 
     </body>
 
