--- a/landingPage.html
+++ b/landingPage.html
@@ -15,7 +15,7 @@
         </div>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="https://alejandro-lopez-chs.github.io/website1/">Portfolio</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="https://bluecoats.com/riffsandrevelations">Contact Me</a></li>
         </ul>
