--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 
     <body>
         <h1>This is my website!</h1>
+        <div class = "container">
         <a href="search.html">1. Search</a>
        <p><a href="loading.html">2.Loading</a></p>
        <p><a href="expanding.html">3.Expanding</a></p>
        <p><a href="sound.html">4.Sound</a></p>
        <p><a href="navigation.html">5.Navigation</a></p>
        <p><a href="landingPage.html">6.Landing Page</a></p>
-
+    </div>
     </body>
 
 </html>
