Tue, Mar 12, 2024, 9:55 AM -07:00

--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
     <body>
         <h1>This is my website!</h1>
         <div class = "container">
-            <div class="panel" style ="background-image: url('css/images/darkcity.jpg')">
+            <div class="panel" style ="<i class="fa-solid fa-magnifying-glass"></i>">
                 <h3>City</h3>
             </div>
         <a href="search.html">1. Search</a>
@@ -19,5 +19,5 @@
        <p><a href="landingPage.html">6.Landing Page</a></p>
     </div>
     </body>
-
+<script src="https://kit.fontawesome.com/7fbdfba016.js" crossorigin="anonymous"></script>
 </html>
