--- a/test.html
+++ b/test.html
@@ -8,9 +8,34 @@
     <body>
         <h1>This is my website!</h1>
         <div class = "container">
-            <div class="panel" style ="<i class="fa-solid fa-magnifying-glass"></i>">
-                <h3>City</h3>
+            <div class="panel" style ="">
+                <h3><i class="fa-solid fa-magnifying-glass"></i></h3>
             </div>
+            <div class = "container">
+            <div class="panel" style ="">
+                <h3><i class="fa-solid fa-magnifying-glass"></i></h3>
+            </div>
+            <div class = "container">
+            <div class="panel" style ="">
+                <h3><i class="fa-solid fa-magnifying-glass"></i></h3>
+            </div>
+            <div class = "container">
+            <div class="panel" style ="">
+                <h3><i class="fa-solid fa-magnifying-glass"></i></h3>
+            </div>
+            <div class = "container">
+                <div class="panel" style ="">
+                    <h3><i class="fa-solid fa-magnifying-glass"></i></h3>
+                </div>
+
+
+
+
+
+
+
+
+
         <a href="search.html">1. Search</a>
        <p><a href="loading.html">2.Loading</a></p>
        <p><a href="expanding.html">3.Expanding</a></p>
@@ -19,5 +44,5 @@
        <p><a href="landingPage.html">6.Landing Page</a></p>
     </div>
     </body>
-<script src="https://kit.fontawesome.com/7fbdfba016.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7fbdfba016.js" crossorigin="anonymous"></script>
 </html>
