--- a/test.html
+++ b/test.html
@@ -17,11 +17,11 @@
             </div>
             <div class = "container">
             <div class="panel" style ="">
-                <h3><i class="fa-solid fa-magnifying-glass"></i></h3>
+                <h3><i class="fa-solid fa-expand"></i></h3>
             </div>
             <div class = "container">
             <div class="panel" style ="">
-                <h3><i class="fa-solid fa-magnifying-glass"></i></h3>
+                <h3><i class="fa-solid fa-volume-high"></i></h3>
             </div>
             <div class = "container">
                 <div class="panel" style ="">
