--- a/test.html
+++ b/test.html
@@ -25,7 +25,11 @@
             </div>
             <div class = "container">
                 <div class="panel" style ="">
-                    <h3><i class="fa-solid fa-magnifying-glass"></i></h3>
+                    <h3><i class="fa-solid fa-route"></i></h3>
+                </div>
+                <div class = "container">
+                <div class="panel" style ="">
+                    <h3><i class="fa-solid fa-plane-arrival"></i></h3>
                 </div>
 
 
