--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>testsite1</title>
-        <link rel="stylesheet" href="css/index.css"
+        <link rel="stylesheet" href="css/test.css"
     </head>
 
     <body>
@@ -31,6 +31,7 @@
                 <div class="panel" style ="">
                     <h3><i class="fa-solid fa-plane-arrival"></i></h3>
                 </div>
+            </div>
 
 
 
