Sun, Mar 17, 2024, 10:53 PM -07:00

--- a/test.html
+++ b/test.html
@@ -8,32 +8,43 @@
     <body>
         <h1>This is my website!</h1>
             <div class = "container">
-                <div class="panel" style ="">
                     <h3><i class="fa-solid fa-magnifying-glass"></i></h3>
-                </div>
-                <div class="panel" style ="">
                     <h3><i class="fa-solid fa-spinner"></i></h3>
-                </div>
-                <div class="panel" style ="">
                     <h3><i class="fa-solid fa-expand"></i></h3>
-                </div>
-                <div class="panel" style ="">
                     <h3><i class="fa-solid fa-volume-high"></i></h3>
-                </div>
-                <div class="panel" style ="">
                     <h3><i class="fa-solid fa-route"></i></h3>
-                </div>
-                <div class="panel" style ="">
                     <h3><i class="fa-solid fa-plane-arrival"></i></h3>
-                </div>
             </div>
-        <a href="search.html">1. Search</a>
-       <p><a href="loading.html">2.Loading</a></p>
-       <p><a href="expanding.html">3.Expanding</a></p>
-       <p><a href="sound.html">4.Sound</a></p>
-       <p><a href="navigation.html">5.Navigation</a></p>
-       <p><a href="landingPage.html">6.Landing Page</a></p>
+
+                <h4><a href="search.html" class = "button">1. Search</a></h3>
+            <div class="lanel" style ="">
+                <h4><a href="loading.html" class = "button">2. Loading</a></h3>
+            </div>
+            <div class="eanel" style ="">
+                <h4><a href="expanding.html" class = "button">3. Expanding</a></h3>
+            </div>
+            <div class="oanel" style ="">
+                <h4><a href="sound.html" class = "button">4. Sound</a></h3>
+            </div>
+            <div class="nanel" style ="">
+                <h4><a href="navigation.html" class = "button">5. Navigation</a></h3>
+            </div>
+            <div class="hanel" style ="">
+                <h4><a href="landingPage.html" class = "button">6. Landing Page</a></h3>
+            </div>
+            <nav id="sidebar">
+            <ul>
+                <li><a href="search.html">Search</a></li>
+                <li><a href="loading.html">Loading</a></li>
+                <li><a href="expanding.html">Expanding</a></li>
+                <li><a href="sound.html">Sounds</a></li>
+                <li><a href="navigation.html">Navigation</a></li>
+                <li><a href="landingPage.html">Landing Page</a></li>
+            </ul>
+        </nav>
+
     </div>
     </body>
+    <script src="js/test.js"></script>
     <script src="https://kit.fontawesome.com/7fbdfba016.js" crossorigin="anonymous"></script>
 </html>
