--- a/search.html
+++ b/search.html
@@ -11,6 +11,24 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
             </button>
         </div>
+        <div class="bar">
+            <button class="betn active">
+                <i class="fa-solid fa-angle-up"></i>
+            </button>
+            <div class = "nav active">
+            <nav id="sidebar">
+            <ul>
+                <li><a href="index.html">Index</a></li>
+                <li><a href="search.html">Search</a></li>
+                <li><a href="loading.html">Loading</a></li>
+                <li><a href="expanding.html">Expanding</a></li>
+                <li><a href="sound.html">Sounds</a></li>
+                <li><a href="navigation.html">Navigation</a></li>
+                <li><a href="landingPage.html">Landing Page</a></li>
+            </ul>
+        </div>
+        </nav>
+    </div>
     </body>
     <script src="js/search.js"></script>
     <script src="https://kit.fontawesome.com/7fbdfba016.js" crossorigin="anonymous"></script>
