--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
                     <h3><i class="fa-solid fa-plane-arrival"></i></h3>
             </div>
 
-                <h4><a href="search.html" class = "button">1. Search</a></h3>
+                <!-- <h4><a href="search.html" class = "button">1. Search</a></h3>
             <div class="lanel" style ="">
                 <h4><a href="loading.html" class = "button">2. Loading</a></h3>
             </div>
@@ -31,7 +31,13 @@
             </div>
             <div class="hanel" style ="">
                 <h4><a href="landingPage.html" class = "button">6. Landing Page</a></h3>
-            </div>
+            </div> -->
+
+        <div class="bar">
+            <button class="btn active">
+                <i class="fa-solid fa-angle-up"></i>
+            </button>
+            <div class = "nav active">
             <nav id="sidebar">
             <ul>
                 <li><a href="search.html">Search</a></li>
@@ -41,9 +47,10 @@
                 <li><a href="navigation.html">Navigation</a></li>
                 <li><a href="landingPage.html">Landing Page</a></li>
             </ul>
+        </div>
         </nav>
-
     </div>
+
     </body>
     <script src="js/test.js"></script>
     <script src="https://kit.fontawesome.com/7fbdfba016.js" crossorigin="anonymous"></script>
