--- a/index.html
+++ b/index.html
@@ -1,20 +1,41 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <title>Website1</title>
-        <link rel="stylesheet" href="css/index.css"
+        <title>testsite1</title>
+        <link rel="stylesheet" href="css/test.css"
     </head>
 
     <body>
         <h1>This is my website!</h1>
-        <div class = "container">
-        <a href="search.html">1. Search</a>
-       <p><a href="loading.html">2.Loading</a></p>
-       <p><a href="expanding.html">3.Expanding</a></p>
-       <p><a href="sound.html">4.Sound</a></p>
-       <p><a href="navigation.html">5.Navigation</a></p>
-       <p><a href="landingPage.html">6.Landing Page</a></p>
-    </div>
-    </body>
+            <div class = "container">
+                    <h3><i class="fa-solid fa-magnifying-glass"></i></h3>
+                    <h3><i class="fa-solid fa-spinner"></i></h3>
+                    <h3><i class="fa-solid fa-expand"></i></h3>
+                    <h3><i class="fa-solid fa-volume-high"></i></h3>
+                    <h3><i class="fa-solid fa-route"></i></h3>
+                    <h3><i class="fa-solid fa-plane-arrival"></i></h3>
+            </div>
 
+        <div class="bar">
+            <button class="btn active">
+                <i class="fa-solid fa-angle-up"></i>
+            </button>
+            <div class = "nav active">
+            <nav id="sidebar">
+            <ul>
+                <li><a href="index.html">Index</a></li>
+                <li><a href="search.html">Search</a></li>
+                <li><a href="loading.html">Loading</a></li>
+                <li><a href="expanding.html">Expanding</a></li>
+                <li><a href="sound.html">Sounds</a></li>
+                <li><a href="navigation.html">Navigation</a></li>
+                <li><a href="landingPage.html">Landing Page</a></li>
+            </ul>
+        </div>
+        </nav>
+    </div>
+
+    </body>
+    <script src="js/test.js"></script>
+    <script src="https://kit.fontawesome.com/7fbdfba016.js" crossorigin="anonymous"></script>
 </html>
