--- a/loading.html
+++ b/loading.html
@@ -8,7 +8,23 @@
     <body>
         <div class="bg"></div>
         <div class="loading-text">0%</div>
+        <div class="bar">
+            <button class="betn active">
+                <i class="fa-solid fa-angle-up"></i>
+            </button>
+            <div class = "nav active">
+            <nav id="sidebar">
+            <ul>
+                <li><a href="index.html">Index</a></li>
+                <li><a href="search.html">Search</a></li>
+                <li><a href="loading.html">Loading</a></li>
+                <li><a href="expanding.html">Expanding</a></li>
+                <li><a href="sound.html">Sounds</a></li>
+                <li><a href="navigation.html">Navigation</a></li>
+                <li><a href="landingPage.html">Landing Page</a></li>
+            </ul>
+        </div>
     </body>
-
+    <script src="https://kit.fontawesome.com/7fbdfba016.js" crossorigin="anonymous"></script>
     <script src="js/loading.js"></script>
 </html>
