--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <title>testsite1</title>
-        <link rel="stylesheet" href="css/test.css"
+        <title>Website1</title>
+        <link rel="stylesheet" href="css/index.css">
     </head>
 
     <body>
